RESOLVED FIXED305902
REGRESSION(305629@main) [Coordinated Graphics] Assertion failure in DropShadowFilterOperation::blend() with drop-shadow filter animation
https://bugs.webkit.org/show_bug.cgi?id=305902
Summary REGRESSION(305629@main) [Coordinated Graphics] Assertion failure in DropShado...
Lauro Moura
Reported 2026-01-20 18:46:22 PST
css3/filters/drop-shadow-current-color.html The assertion added in 305629@main doesn't seem to affect our ports, as the release test (without assertions) are passing normally: https://results.webkit.org/?suite=layout-tests&test=css3%2Ffilters%2Fdrop-shadow-current-color.html Trace: Thread 1 (Thread 0x7fc420cdc6c0 (LWP 707751)): #0 WTFCrash () at ../../../Source/WTF/wtf/Assertions.cpp:380 #1 0x00007fc4a919cffd in WTFCrashWithInfo () at WTF/Headers/wtf/Assertions.h:985 #2 0x00007fc4b54f3242 in WebCore::DropShadowFilterOperation::blend (this=0x7fc4882849f0, from=0x7fc488284990, context=..., blendToPassthrough=false) at ../../../Source/WebCore/platform/graphics/filters/FilterOperation.cpp:416 #3 0x00007fc4af041546 in WebCore::blendFunc (fromOp=0x7fc488284990, toOp=..., progress=0.70345914363861084, blendToPassthrough=false) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperAnimation.cpp:38 #4 0x00007fc4af0417db in WebCore::applyFilterAnimation (from=..., to=..., progress=0.70345914363861084) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperAnimation.cpp:64 #5 0x00007fc4af042e76 in WebCore::TextureMapperAnimation::applyInternal (this=0x7fc48837c280, applicationResults=..., from=..., to=..., progress=0.703459144) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperAnimation.cpp:306 #6 0x00007fc4af0428e8 in WebCore::TextureMapperAnimation::apply (this=0x7fc48837c280, applicationResults=..., time=..., keepInternalState=WebCore::TextureMapperAnimation::KeepInternalState::No) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperAnimation.cpp:244 #7 0x00007fc4af043872 in WebCore::TextureMapperAnimations::apply (this=Python Exception <class 'RecursionError'>: maximum recursion depth exceeded 0x7fc48606f290, applicationResults=..., time=..., keepInternalState=WebCore::TextureMapperAnimation::KeepInternalState::No) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperAnimation.cpp:415 #8 0x00007fc4af056c21 in WebCore::TextureMapperLayer::syncAnimations (this=0x7fc48606f000, time=...) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:1503 #9 0x00007fc4af056a00 in WebCore::TextureMapperLayer::applyAnimationsRecursively (this=0x7fc48606f000, time=...) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:1490 #10 0x00007fc4af056ae5 in WebCore::TextureMapperLayer::applyAnimationsRecursively (this=0x7fc48606d200, time=...) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:1496 #11 0x00007fc4af056ae5 in WebCore::TextureMapperLayer::applyAnimationsRecursively (this=0x7fc48606c800, time=...) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:1496 #12 0x00007fc4af056ae5 in WebCore::TextureMapperLayer::applyAnimationsRecursively (this=0x7fc48606dc00, time=...) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:1496 #13 0x00007fc4af056ae5 in WebCore::TextureMapperLayer::applyAnimationsRecursively (this=0x7fc48606e600, time=...) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:1496 #14 0x00007fc4af056ae5 in WebCore::TextureMapperLayer::applyAnimationsRecursively (this=0x7fc48606aa00, time=...) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:1496 #15 0x00007fc4af056ae5 in WebCore::TextureMapperLayer::applyAnimationsRecursively (this=0x7fc4861a0000, time=...) at ../../../Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:1496 #16 0x00007fc4abf18ace in WebKit::ThreadedCompositor::paintToCurrentGLContext (this=0x7fc4880a44a0, matrix=..., size=...) at ../../../Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:268 #17 0x00007fc4abf19c6b in WebKit::ThreadedCompositor::renderLayerTree (this=0x7fc4880a44a0) at ../../../Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:405 #18 0x00007fc4abf20315 in WTF::RunLoop::Timer::Timer<WebKit::ThreadedCompositor>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebKit::ThreadedCompositor*, void (WebKit::ThreadedCompositor::*)())::{lambda()#1}::operator()() const (__closure=0x7fc4880de5e8) at WTF/Headers/wtf/RunLoop.h:210 #19 0x00007fc4abf3a77c in WTF::Detail::CallableWrapper<WTF::RunLoop::Timer::Timer<WebKit::ThreadedCompositor>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebKit::ThreadedCompositor*, void (WebKit::ThreadedCompositor::*)())::{lambda()#1}, void>::call() (this=0x7fc4880de5e0) at WTF/Headers/wtf/Function.h:59 #20 0x00007fc4a91ef8ef in WTF::Function<void ()>::operator()() const (this=0x7fc4880a4550) at WTF/Headers/wtf/Function.h:103 #21 0x00007fc4a91ee502 in WTF::RunLoop::Timer::fired (this=0x7fc4880a4518) at WTF/Headers/wtf/RunLoop.h:262 #22 0x00007fc4aececb91 in operator() (__closure=0x0, userData=0x7fc4880a4518) at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:327 #23 0x00007fc4aececbd5 in _FUN () at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:331 #24 0x00007fc4aeceb75a in operator() (__closure=0x0, source=0x562c96aa5580, callback=0x7fc4aececbb4 <_FUN(gpointer)>, userData=0x7fc4880a4518) at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:115 #25 0x00007fc4aeceb7c7 in _FUN () at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:118 #26 0x00007fc4984a940e in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #27 0x00007fc4984a9680 in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #28 0x00007fc4aecec14b in WTF::RunLoop::runGLibMainLoopIteration (this=0x7fc488110110, mayBlock=WTF::RunLoop::MayBlock::Yes) at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:190 #29 0x00007fc4aecec1ba in WTF::RunLoop::runGLibMainLoop (this=0x7fc488110110) at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:199 #30 0x00007fc4aecec282 in WTF::RunLoop::run () at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:212 #31 0x00007fc4aeb00a82 in operator() (__closure=0x7fc488102ae8) at ../../../Source/WTF/wtf/RunLoop.cpp:112 #32 0x00007fc4aeb04bea in WTF::Detail::CallableWrapper<WTF::RunLoop::create(WTF::ASCIILiteral, WTF::ThreadType, WTF::Thread::QOS)::<lambda()>, void>::call(void) (this=0x7fc488102ae0) at ../../../Source/WTF/wtf/Function.h:59 #33 0x00007fc4a91ef8ef in WTF::Function<void ()>::operator()() const (this=0x7fc420cdbb38) at WTF/Headers/wtf/Function.h:103 #34 0x00007fc4aec1d49f in WTF::Thread::entryPoint (newThreadContext=0x7fc488038900) at ../../../Source/WTF/wtf/Threading.cpp:260 #35 0x00007fc4aed03f43 in WTF::wtfThreadEntryPoint (context=0x7fc488038900) at ../../../Source/WTF/wtf/posix/ThreadingPOSIX.cpp:245 #36 0x00007fc49948aaa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #37 0x00007fc499517c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
Attachments
Lauro Moura
Comment 1 2026-01-20 19:01:06 PST
EWS
Comment 2 2026-01-21 04:44:51 PST
Committed 305934@main (76a9da722072): <https://commits.webkit.org/305934@main> Reviewed commits have been landed. Closing PR #56943 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-21 04:45:16 PST
Note You need to log in before you can comment on or make changes to this bug.