REGRESSION(305629@main) [Coordinated Graphics] Assertion failure in DropShadowFilterOperation::blend() with drop-shadow filter animation https://bugs.webkit.org/show_bug.cgi?id=305902

Reviewed by Fujii Hironori.

305629@main added an assertion that DropShadowFilterOperation::blend()
should only run in the UI process. However, Coordinated Graphics performs
filter animation blending in the Web process via TextureMapperAnimation.

Guard the assertion for non-Coordinated Graphics platforms.

No new tests, css3/filters/drop-shadow-current-color.html now passes
in Debug builds.

* Source/WebCore/platform/graphics/filters/FilterOperation.cpp:
(WebCore::DropShadowFilterOperation::blend):

Canonical link: https://commits.webkit.org/305934@main